Added Oligopoly image and added link in allGames and teacherSelectGame

--- a/HTML/admin/allGames.html
+++ b/HTML/admin/allGames.html
@@ -24,6 +24,14 @@
         </table>
     </div>
 
+    <!-- Oligopoly Dates -->
+    <div id="oligopolyGameDates">
+        <table style="width: 50%">
+            <caption style="font-size: 18px"><strong>Oligopoly</strong></caption>
+            <tbody id="oligopolyDatesTable"></tbody>
+        </table>
+    </div>
+
     <br>
 
     <!-- Navigation Links -->
