--- a/HTML/admin/teacherSelectGame.html
+++ b/HTML/admin/teacherSelectGame.html
@@ -22,7 +22,11 @@
             </div>
             <div class="game-wrapper">
                 <img src="../../Img/WheatAndSteel.jpeg" alt="Wheat and Steel" class="game-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">
-                <h3>Wheat And Steal</h3>
+                <h3>Wheat And Steel</h3>
+            </div>
+            <div class="game-wrapper">
+                <img src="../../Img/Oligopoly.jpeg" alt="Oligopoly" class="game-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">
+                <h3>Oligopoly</h3>
             </div>
         </div>
     </div>
