Updated image name in teacherSelectGame

--- a/HTML/admin/teacherSelectGame.html
+++ b/HTML/admin/teacherSelectGame.html
@@ -25,7 +25,7 @@
                 <h3>Wheat And Steel</h3>
             </div>
             <div class="game-wrapper">
-                <img src="../../Img/Oligopoly.jpeg" alt="Oligopoly" class="game-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">
+                <img src="../../Img/OligopolySmall.jpg" alt="Oligopoly" class="game-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">
                 <h3>Oligopoly</h3>
             </div>
         </div>
