--- a/HTML/studentOliGame/teacherOliGame.html
+++ b/HTML/studentOliGame/teacherOliGame.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oligopoly Game</title>
+    <link rel="stylesheet" href="../../css/oliTeacherGameView.css">
     <style>
         body {
             font-family: Arial, sans-serif;
