Added response form and teacher view for responses and moved files around

--- a/HTML/admin/wheatSteelView.html
+++ b/HTML/admin/wheatSteelView.html
@@ -59,4 +59,7 @@
         </tr>
     </table>
 </body>
+<footer>
+    <button onclick="window.location.href='studentResponseForm.html'">Submit Reflection</button>
+</footer>
 </html>
