--- a/HTML/studentWheatSteel/studentWheatSteelGameView.html
+++ b/HTML/studentWheatSteel/studentWheatSteelGameView.html
@@ -33,23 +33,19 @@
         </div>
         
         <div class="section">
+            <h3>Production:</h3>
             <label for="wheatAmount">Wheat to produce (units):</label>
             <input type="number" id="wheatAmount" min="0" value="0">
             <img src="../../Img/wheat.jpg" alt="Wheat" class="resource-img">
-        </div>
-        
-        <div class="section">
+            <br>
             <label for="steelAmount">Steel to produce (units):</label>
             <input type="number" id="steelAmount" min="0" value="0">
             <img src="../../Img/steel.jpg" alt="Steel" class="resource-img">
+            <br>
+            <p>Time Spent: <span id="timeSpent">0</span> hours</p>
+            <button id="produceButton">Produce</button>
+            <button id="nextPeriodButton">Next Period</button>
         </div>
-
-        <div class="section">
-            <strong>Time to be deducted: </strong><span id="timeSpent">0</span> hours
-        </div>
-
-        <button id="produceButton">Produce</button>
-        <button id="nextPeriodButton">Next Period</button>
 
         <!-- New section for total consumed and goals -->
         <div class="consumption-section">
