Created W&S teacher view page

--- a/HTML/studentWheatSteel/studentWheatSteelResults.html
+++ b/HTML/studentWheatSteel/studentWheatSteelResults.html
@@ -94,7 +94,7 @@
             <p><strong>Overall Status:</strong> <span id="overallStatus">Incomplete</span></p>
         </div>
 
-        <a href="https://cssgametheory.com/CSSGametheory/HTML/StudentSignIn/studentEnterCode.html" class="back-btn">Return to Lobby</a>
+        <a href="https://cssgametheory.com/CSSGametheory/HTML/StudentSignIn/php/studentSignOn.php" class="back-btn">Return to Lobby</a>
     </div>
 
     <script src="../../javascript/wheatSteelGame.js" defer></script>
